// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CacheParameters /> should rander when [hash=null] 1`] = `
<Box__BoxGroup>
  <Box__BoxGroupHeader>
    Trim Parameters
  </Box__BoxGroupHeader>
  <Table>
    <tbody />
  </Table>
</Box__BoxGroup>
`;

exports[`<CacheParameters /> should render 1`] = `
<Box__BoxGroup>
  <Box__BoxGroupHeader>
    Trim Parameters
  </Box__BoxGroupHeader>
  <Table>
    <tbody>
      <tr
        key="0"
      >
        <Parameters__CacheParameterKey>
          0
        </Parameters__CacheParameterKey>
        <td>
          f
        </td>
      </tr>
      <tr
        key="1"
      >
        <Parameters__CacheParameterKey>
          1
        </Parameters__CacheParameterKey>
        <td>
          o
        </td>
      </tr>
      <tr
        key="2"
      >
        <Parameters__CacheParameterKey>
          2
        </Parameters__CacheParameterKey>
        <td>
          o
        </td>
      </tr>
    </tbody>
  </Table>
</Box__BoxGroup>
`;
